Spacing on row bug fix

--- a/module/Application/sass/application.scss
+++ b/module/Application/sass/application.scss
@@ -16,7 +16,7 @@ input.error {
     box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
 }
 
-.row{margin-bottom:15px}
+.show-grid{margin-bottom:15px}
 
 .form-metadata {
     color: #808080;
